data/derived/sp14/progs/unify/prog4333.ml.out
Characters 147-164:
  | Sine (e1)          -> Printf.printf"e1"
                          ^^^^^^^^^^^^^^^^^
Error: This expression has type unit but an expression was expected of type
         string -> string
